add name indexpage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
       </nav>
       <div class="container">
           <div class="jumbotron">
-              <h1 class="display-3">Product Database</h1>
+              <h1 class="display-3">Yodsakorn Pansit</h1><h3>6030213009</h3>
               <p class="lead">Product management Web application</p>
               <hr class="my-2">
               <p>More info</p>
