--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-          <a class="navbar-brand" href="#">Product Management</a>
+          <a class="navbar-brand" href="/">Product Management</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
